--- a/lib/settings/Defaut/settingsHero_Defaut.ini
+++ b/lib/settings/Defaut/settingsHero_Defaut.ini
@@ -110,6 +110,9 @@ SpellDistance4=
 LifeForPotion=60
 PotionStock=100
 
+;#si 0 désactivé
+NbPotionBuy=0
+
 ;# Prise des Sanctuaires
 TakeShrines=true
 
