Corrections typo + modifs mineures dans l'UI
Spécifique à l'UI : traduction, réagencement des
monsterlist/specialmonsterlist + groupe monstertri, inventorycheck, etc.
Ajout de bulles d'aide pour expliciter certaines cases.

--- a/lib/settings/Defaut/settingsHero_Defaut.ini
+++ b/lib/settings/Defaut/settingsHero_Defaut.ini
@@ -110,7 +110,7 @@ SpellDistance4=
 LifeForPotion=60
 PotionStock=100
 
-;#si 0 désactivé
+;# Achat de potion. Désactivé si égal à 0
 NbPotionBuy=0
 
 ;# Prise des Sanctuaires
@@ -126,11 +126,19 @@ maxgamelength=1800000
 attackRange=50
 grabRange=130
 
-;# bloc à commenter
+;# Activation du tri des mobs 
 MonsterTri=True
+
+;# Vérification des mobs encore présents
 MonsterRefresh=True
+
+;# Vérification des objets présents
 ItemRefresh=True
+
+;# Priorité aux monstres ==> le bot tuera d'abord tous les mobs autour de lui, puis ramassera les objets au sol
 MonsterPriority=false
+
+;# Vérification de l'inventaire en début de run
 InventoryCheck=True
 
 ;# Temporisations de l'attaque et du ramassage
@@ -156,11 +164,18 @@ Life_Mine=100
 Life_Arm=100
 Life_Spore=100
 
-;# bloc à commenter
+
+;# Gestion des déplacements pendant le run (/!!!\ à laisser sur True /!!!\)
 UsePath=True
+
+;# Activation de la résurrection du personnage
 ResActivated=True
+
+;# Définition du nombre de résurrection avant de quitter la partie
 ResLife=3
 
-;# Gestion des pauses HC
+;# Sécurité Personnage Hard Core
 HCSecurity=false
+
+;# Vie minimum pour déclencher la sécurité HC
 MinHCLife=80
