--- a/lib/settings/Defaut/settings_Defaut.ini
+++ b/lib/settings/Defaut/settings_Defaut.ini
@@ -1,5 +1,5 @@
 ;################################################################################
-;#   Les lignes commançants par ;### ou ; sont des commentaires,				#
+;#   Les lignes commençants par ;### ou ; sont des commentaires,				#
 ;#   Elles sont là pour vous aider à la configuration, inutile de les modifier. #
 ;################################################################################
 
